<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tabHost"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TabWidget>

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="831dp"
                    android:layout_weight="1.0">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="@style/CircularDeterminateProgressBar"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:progress="0"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_view_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0%"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
                        app:layout_constraintEnd_toEndOf="@+id/progress_bar"
                        app:layout_constraintStart_toStartOf="@+id/progress_bar"
                        app:layout_constraintTop_toTopOf="@+id/progress_bar" />

                    <Button
                        android:id="@+id/buttonRefresh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:onClick="onClickRefresh"
                        android:text="@string/refresh_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

                    <TextView
                        android:id="@+id/textViewPumpTimeTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="40dp"
                        app:layout_constraintStart_toEndOf="@+id/progress_bar"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textViewPumpTimeNum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        app:layout_constraintStart_toEndOf="@+id/progress_bar"
                        app:layout_constraintTop_toBottomOf="@+id/textViewPumpTimeTitle" />

                    <Switch
                        android:id="@+id/switchPump"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:text="@string/pump_switch"
                        app:layout_constraintBottom_toBottomOf="@+id/radioGroup"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/radioGroup"
                        app:layout_constraintTop_toTopOf="@+id/radioGroup" />

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:onClick="onClickRadioGroup"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toStartOf="@+id/switchPump"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/progress_bar">

                        <RadioButton
                            android:id="@+id/radioButtonModeHome"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:text="@string/to_house" />

                        <RadioButton
                            android:id="@+id/radioButtonModeStreet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/to_street" />
                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="831dp"
                    android:layout_weight="1.0">

                    <Switch
                        android:id="@+id/switchCHLight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="200dp"
                        android:text="@string/lightInChickenHouse"
                        app:layout_constraintBottom_toTopOf="@id/buttonGLAviary"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/buttonGLAviary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="100dp"
                        android:onClick="onClickSwitchGeneralLightInAviary"
                        android:text="@string/canopyLight"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/switchCHLight" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</TabHost>